# OniTagEditor

./: .gitignore  .gitignore.swp  CMakeLists.txt  CMakeSettings.json  ID3v1_utils.c  ID3v1_utils.h  Makefile  Mp3TagEditor.c  README.md  a.c  binedit.c  binedit.h  hashset.h  main.c  tess.c  tester.c  tmp.py
OniTagEditor/: OniTagEditor.vcxproj  OniTagEditor.vcxproj.filters  crc32.cpp  crc32.h  extended_tag_header.cpp  extended_tag_header.h  frame.cpp  frame.h  frame_body.cpp  frame_body.h  frame_header.cpp  frame_header.h  id3v1.cpp  id3v1.h  id3v2.cpp  id3v2.h  oni_tag_editor.cpp  tag.cpp  tag.h  tag_header.cpp  tag_header.h
OniTagEditor/Debug/OniTagEditor.tlog/: OniTagEditor.lastbuildstate
app/: CMakeLists.txt  main.cpp
include/Mp3TagEditor/: mp3TagEditor.h
include/OniTagEditor/: Mp3TagEditor.h  oni_tag_editor.h
resources/: origionalTag.txt
scripts/: mp3.py  tec.py
src/: CMakeLists.txt  frame_types.cpp  frame_types.h  hashmap.c  hashmap.h  hashset.c  mp3TagEditor.cpp  old.c  oni_tag_editor.cpp  tag_structs.h
